--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
         "dev": "vite",
         "build": "run-p type-check \"build-only {@}\" --",
         "preview": "vite preview",
-        "test:unit": "vitest",
-        "test:e2e": "playwright test",
+        "test": "vitest",
         "build-only": "vite build",
         "type-check": "vue-tsc --build --force",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/"
     },
     "devDependencies": {
-        "@playwright/test": "^1.42.1",
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node20": "^20.1.2",
         "@types/jsdom": "^21.1.6",
         "@types/node": "^20.11.28",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vitest/ui": "^1.4.0",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/eslint-config-typescript": "^12.0.0",
         "@vue/test-utils": "^2.4.5",
@@ -32,6 +31,7 @@
         "jsdom": "^24.0.0",
         "npm-run-all2": "^6.1.2",
         "prettier": "^3.0.3",
+        "sass": "^1.72.0",
         "typescript": "~5.4.0",
         "vite": "^5.1.6",
         "vitest": "^1.4.0",
@@ -39,8 +39,5 @@
         "vue-router": "^4.3.0",
         "vue-tsc": "^2.0.6",
         "vuex": "^4.1.0"
-    },
-    "dependencies": {
-        "sass": "^1.72.0"
     }
 }
