--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "run-p type-check \"build-only {@}\" --",
+        "build": "npm run type-check && npm run build-only",
         "preview": "vite preview",
         "test": "vitest",
         "build-only": "vite build",
-        "type-check": "vue-tsc --build --force",
+        "type-check": "vue-tsc --noEmit && echo 'Type check passed!'",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-        "format": "prettier --write src/"
+        "format": "prettier --write src/",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.3.3",
@@ -28,6 +30,7 @@
         "eslint": "^8.49.0",
         "eslint-plugin-playwright": "^1.5.2",
         "eslint-plugin-vue": "^9.17.0",
+        "gh-pages": "^6.1.1",
         "jsdom": "^24.0.0",
         "npm-run-all2": "^6.1.2",
         "prettier": "^3.0.3",
