Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+.package-lock.json
+package-lock.json
 
 node_modules
 .DS_Store
 dist-ssr
 coverage
 *.local
-
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
@@ -29,4 +28,3 @@ coverage
 *.tsbuildinfo
 
 test-results/
-playwright-report/
